Update consent configs

--- a/content/data/account-aggregator/consent-configurations.mdx
+++ b/content/data/account-aggregator/consent-configurations.mdx
@@ -25,16 +25,20 @@ These Consent Configurations carry information about all the different types of 
 | `frequency` has 2 components—`unit` and `value` | `unit` can be `HOURLY`, `DAILY`, `MONTHLY`, `YEARLY`. `value` has to be greater than 0.<br/>Additionally the maximum frequency value is defined is `1` request per HOUR. So, no more than `24` requests are allowed per DAY                                                                                                                                                                                  |
 | `redirectUrl`                                   | Redirect your users back to your application once the consent is reviewed. By default, the redirectURL is https://setu.co/                                                                                                                                                                                                                                                                                   |
 
+<br />
+
 ### Consent Request object
 
 | Property Name                                                | Description                                                                                                                                                                                                                                                                                                                                               |
-| ------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --- |
+| ------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `consentDuration` has 2 components—`unit` and `value`        | Date time field that define the time period for which the consent is valid and can be use for data fetch.The start time is assumed to be the datetime at which the consent was created.`unit` can be `MONTH`, `YEAR`, `DAY`.                                                                                                                              |
 | `consentDateRange`has 2 components-`startDate` and `endDate` | Date time fields that define the time period for which the consent is valid and can be use for data fetch.                                                                                                                                                                                                                                                |
 | `vua`                                                        | What your customer would use to login to Setu’s AA. It should be sent in the format of **<customer_mobile_number>@onemoney-aa**                                                                                                                                                                                                                           |
 | `dataRange`                                                  | This is used to specify the `from` and `to` date-time range for querying financial information. It is mandatory only when the `consentTypes` array includes `TRANSACTIONS`.                                                                                                                                                                               |
-| `dataFilter`                                                 | Allows you to specify conditions for filtering the data being fetched. For example, fetch transactions where the `TRANSACTIONAMOUNT` is greater than or equal to INR 20,000. You can use the `type`, `operator` and `value` keys to set the filters.                                                                                                      |     |
-| `context`                                                    | Allows you to specify an FIP OR Account type (Current, Savings, Insurance, etc) as a key value pair for you to be able to customise the accounts fetched on the consent flow. We support the context filters `accounttype` which takes the Key as `accounttype` where values can be `CURRENT` or `SAVINGS` and `fipid` with the `FIP ID` as the value(s). |     |
+| `dataFilter`                                                 | Allows you to specify conditions for filtering the data being fetched. For example, fetch transactions where the `TRANSACTIONAMOUNT` is greater than or equal to INR 20,000. You can use the `type`, `operator` and `value` keys to set the filters.                                                                                                      |
+| `context`                                                    | Allows you to specify an FIP OR Account type (Current, Savings, Insurance, etc) as a key value pair for you to be able to customise the accounts fetched on the consent flow. We support the context filters `accounttype` which takes the Key as `accounttype` where values can be `CURRENT` or `SAVINGS` and `fipid` with the `FIP ID` as the value(s). |
+
+<br />
 
 <Callout type type="tip">
     Either <code>consentDuration</code> or <code>consentDateRange</code> can be
