--- a/content/data/account-aggregator/consent-configurations.mdx
+++ b/content/data/account-aggregator/consent-configurations.mdx
@@ -7,9 +7,9 @@ visible_in_sidebar: true
 
 ## Consent Configurations
 
-These Consent Configurations are the core of the AA framework.
+Consent Configurations are the core of the AA framework.
 
-These Consent Configurations carry information about all the different types of data the FIU needs, the purpose of the data, and how the FIU plans to use the data and so on. All params described below can be configured on the <a href="https://bridge.setu.co/signup" target="_blank"> Bridge</a>
+Consent Configurations carry information about all the different types of data the FIU needs, the purpose of the data, and how the FIU plans to use the data and so on. All parameters described below can be configured on the <a href="https://bridge.setu.co/signup" target="_blank"> Bridge</a>
 
 ### Consent Configurations
 
@@ -40,6 +40,11 @@ These Consent Configurations carry information about all the different types of 
 
 <br />
 
+<Callout type type="highlight">
+Few parameters are required to be specified for the creation of a consent. Some of these parameters can be set on bridge(Consent configuration)
+and if required , can be overriden during consent creation. Some other configurations have to be passed in the request body during consent creation(Consent Request object).
+</Callout>
+<br />
 <Callout type type="tip">
     Either <code>consentDuration</code> or <code>consentDateRange</code> can be
     specified.If both are specified,<code>consentDuration</code> takes
