--- a/content/data/account-aggregator/consent-configurations.mdx
+++ b/content/data/account-aggregator/consent-configurations.mdx
@@ -41,8 +41,8 @@ Consent Configurations carry information about all the different types of data t
 <br />
 
 <Callout type type="highlight">
-Few parameters are required to be specified for the creation of a consent. Some of these parameters can be set on bridge(Consent configuration)
-and if required , can be overriden during consent creation. Some other configurations have to be passed in the request body during consent creation(Consent Request object).
+Few parameters are required to be specified for the creation of a consent. Some of these parameters can be set on bridge (<strong>Consent configuration</strong>)
+and if required , can be overriden during consent creation. Some other configurations have to be passed in the request body during consent creation (<strong>Consent Request object</strong>).
 </Callout>
 <br />
 <Callout type type="tip">
