Changed data type of platformBillIds

--- a/content/payments/bbps/notifications.mdx
+++ b/content/payments/bbps/notifications.mdx
@@ -36,8 +36,8 @@ A `SETTLEMENT_SUCCESSFUL` notification is sent to the biller after successful se
                     "currencyCode" : "INR",
                     "value"        : 108400 // in paise
                 },
-                "platformBillIds"   : [
-                    integer
+                "platformBillIds"   : [ // list of strings
+                    string
                 ],
                 "status"            : "SETTLEMENT_SUCCESSFUL",
                 "transactionId"     : "1074362738220"
