Update Consent Config to Consent Object

--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 Get users' consent before you can start pulling their financial data with Setu AA by initiating Consent flow in your application. This flow broadly consists of two parts:
 
-1.  **Create Consent Request**—this is essentially a one-time data request that your user needs to approve. To know more details about this please visit [Consent Configurations](/data/account-aggregator/consent-configurations) page.
+1.  **Create Consent Request**—this is essentially a one-time data request that your user needs to approve. To know more details about this please visit [Consent Object](/data/account-aggregator/consent-object) page.
 
 -   Once a consent is created, you will receive a unique `id` with `status = PENDING`, along with a `url` where you can **redirect your customer to consent manager screens**, to review the data request. Here, the user may approve or reject the request
 
