--- a/content/data/account-aggregator/quickstart.mdx
+++ b/content/data/account-aggregator/quickstart.mdx
@@ -14,7 +14,7 @@ Here is a quick summary of steps to help you integrate with Setu’s AA. Before 
 -   **FIU** or Financial Information User—The entity requesting for data from its customers, i.e., you.
 -   **FIP** or Financial Information Provider—The entity that you request the financial data from, like a bank or an insurance provider.
 -   **FI types / data sources**—The types of financial data you can request for, from your customers. Setu AA provides mock data for all 23 FI data types enabled by AA. You can check them out <a href="/data/account-aggregator/fi-data-types" target="_blank">here</a>.
--   **Consent Configurations**—This is core of the AA framework, wherein you (the FIU) request for consent from your customer to use one or more FI types. As part of the consent object, you would need to provide details like the reason for data request, how many times the data would be fetched etc. You can read more on the details that are sent as part of consent request <a href="/data/account-aggregator/consent-configurations" target="_blank">here</a>.
+-   **Consent Object**—This is core of the AA framework, wherein you (the FIU) request for consent from your customer to use one or more FI types. As part of the consent object, you would need to provide details like the reason for data request, how many times the data would be fetched etc. You can read more on the details that are sent as part of consent request <a href="/data/account-aggregator/consent-object" target="_blank">here</a>.
 
 Try out our sample app built using Setu AA sandbox <a href="https://github.com/SetuHQ/account-aggregator-sample-app" target="_blank">here</a>
 
