Update Raise a ticket page

--- a/content/payments/bbps/bill-structure/special-cases.mdx
+++ b/content/payments/bbps/bill-structure/special-cases.mdx
@@ -227,7 +227,7 @@ Wrap the bill object in the following pattern, and send it across to us as part 
 
 <br />
 
-**Please note that**, for a biller—a school or university in this case—to be able to display a line by line break up of tuition fees, transport fees, mess fees etc, the biller has to get all line items registered with Setu to display the fees break up properly. [Raise a ticket](https://support.setu.co/support/tickets/new) to get support.
+**Please note that**, for a biller—a school or university in this case—to be able to display a line by line break up of tuition fees, transport fees, mess fees etc, the biller has to get all line items registered with Setu to display the fees break up properly. [Raise a ticket](https://setu.co/support) to get support.
 
 <hr class="tertiary" />
 
