--- a/content/payments/bbps/quickstart/api-integration.mdx
+++ b/content/payments/bbps/quickstart/api-integration.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 Start by signing up on <a href="https://bridge.setu.co/" target="_blank">The Bridge ↗</a>, if you haven’t already. This is Setu’s single portal for managing all your integrations with us.
 
-If you face any issues with integration, <a href="https://support.setu.co/support/tickets/new" target="_blank">raise a support ticket ↗</a> and our team will reach out.
+If you face any issues with integration, <a href="https://setu.co/support" target="_blank">raise a support ticket ↗</a> and our team will reach out.
 
 <hr class="primary" />
 
@@ -37,7 +37,10 @@ And done! The biller has been created, and you can proceed to the biller dashboa
 ##### Step 2 — Add product configuration
 
 <Callout type="warning">
-    Please note, any changes made to the Production configuration, will require approval from a Setu admin. Until approved, the changes will not be made live. This maker-checker process exists to ensure that there are no accidental updates to the configurations of live products.
+    Please note, any changes made to the Production configuration, will require
+    approval from a Setu admin. Until approved, the changes will not be made
+    live. This maker-checker process exists to ensure that there are no
+    accidental updates to the configurations of live products.
 </Callout>
 
 <br />
