--- a/content/payments/upi-deeplinks/quickstart/go-live.mdx
+++ b/content/payments/upi-deeplinks/quickstart/go-live.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 Once you've tested your integration on The Bridge Sandbox environment with sample transactions, you can go live and accept payments from actual customers.
 
-In case you face an issue with any of the following steps, [raise a support ticket](https://support.setu.co/support/tickets/new) and our team will reach out to you.
+In case you face an issue with any of the following steps, [raise a support ticket](https://setu.co/support) and our team will reach out to you.
 
 <hr class="primary" />
 
@@ -23,12 +23,12 @@ Look at this [quick video](https://www.loom.com/share/66829268eb8f433283a551a513
 
 Click on the “Configuration” tab. Here are the details needed—
 
-- The `callbackURL` if you wish to receive notifications from Setu upon settlement.
-- The settlement account details, to which your customer payments will be settled.
+-   The `callbackURL` if you wish to receive notifications from Setu upon settlement.
+-   The settlement account details, to which your customer payments will be settled.
 
 <Callout type="tip">
-  Note that you cannot edit the account number and IFSC code once your account
-  has been marked as <code>CERTIFIED</code>.
+    Note that you cannot edit the account number and IFSC code once your account
+    has been marked as <code>CERTIFIED</code>.
 </Callout>
 
 <hr class="primary" />
@@ -62,17 +62,17 @@ Till the time the new details aren't approved by Setu, your older configuration 
 See this <a href="https://www.loom.com/share/581b0fceb3b94703b82565d398082e9a" target="_blank" >quick video </a> to see and download reports.
 
 <Callout type="tip">
-  You should switch to the Production environment to view transactions against
-  LIVE configurations.
+    You should switch to the Production environment to view transactions against
+    LIVE configurations.
 </Callout>
 
 <br />
 Also, you can opt to use our <a
-  href="/payments/upi-deeplinks/reports"
-  target="_blank"
+    href="/payments/upi-deeplinks/reports"
+    target="_blank"
 >
-  {" "}
-  Reports APIs
+    {" "}
+    Reports APIs
 </a> to get available transaction and settlement data, which gives you more flexibility
 in consuming the data.
 
