moved additional info inside data

--- a/content/payments/upi-deeplinks/notifications.mdx
+++ b/content/payments/upi-deeplinks/notifications.mdx
@@ -43,19 +43,19 @@ After Setu receives a callback from the bank for a particular payment, we send a
         "sourceAccount": {            // this is the account from which the payment was made and will only be sent for TPV-enabled merchants
           "ifsc": "SETU0000012",      
           "name": "Noresh",           
-          "number": "9009120939129"   
+          "number": "9009120939129"
         },
         "status": "PAYMENT_SUCCESSFUL",
         "transactionId": "260843001102590",
-        "transactionNote": "Payment for 918147077472"
+        "transactionNote": "Payment for 918147077472",
+        "additionalInfo" : {   // same as values defined when creating the link
+          "UUID": "b6b6f173-8649-4b2e-9c22-f78e9195a23e",
+          "tags": "electricity"
+        },
       },
       "timeStamp": 1652772351636,
       "type": "BILL_FULFILMENT_STATUS",
-      "id": "edead767-1584-4177-bd45-7ac9cd201c28",
-      "additionalInfo" : {   // same as values defined when creating the link
-        "UUID": "b6b6f173-8649-4b2e-9c22-f78e9195a23e",
-        "tags": "electricity"
-      },
+      "id": "edead767-1584-4177-bd45-7ac9cd201c28"
     }
   ]
 }`}
