moved additional info inside data

--- a/content/payments/upi-deeplinks/notifications.mdx
+++ b/content/payments/upi-deeplinks/notifications.mdx
@@ -97,15 +97,15 @@ A payment can fail for multiple reasons as explained below:
         "receiptId": "774cbd68-0106-4635-b861-986d4a5c9792",
         "status": "PAYMENT_FAILED",
         "transactionId": "6917454577784936",
-        "transactionNote": "Payment for 918147077472"
+        "transactionNote": "Payment for 918147077472",
+        "additionalInfo" : {   // same as values defined when creating the link
+          "UUID": "b6b6f173-8649-4b2e-9c22-f78e9195a23e",
+          "tags": "electricity"
+        },
       },
       "timeStamp": 1652772555905,
       "type": "BILL_FULFILMENT_STATUS",
-      "id": "e41d9f2a-eb66-4be0-8dec-f04806656274",
-      "additionalInfo" : {   // same as values defined when creating the link
-        "UUID": "b6b6f173-8649-4b2e-9c22-f78e9195a23e",
-        "tags": "electricity"
-      },
+      "id": "e41d9f2a-eb66-4be0-8dec-f04806656274"
     }
   ]
 }`}
