update AA v1 content

--- a/content/data/account-aggregator/v1/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/v1/api-integration/consent-flow.mdx
@@ -5,7 +5,7 @@ order: 1
 visible_in_sidebar: true
 ---
 
-## Consent flow-V1
+## Consent flow
 
 Get users' consent before you can start pulling their financial data with Setu AA by initiating Consent flow in your application. This flow broadly consists of two parts:
 
