--- a/content/data/account-aggregator/v1/api-integration/data-apis.mdx
+++ b/content/data/account-aggregator/v1/api-integration/data-apis.mdx
@@ -5,7 +5,7 @@ order: 2
 visible_in_sidebar: true
 ---
 
-## Data Flow-V1
+## Data Flow
 
 Below is a summary of the APIs you need to use to fetch FI data. These APIs are to be used only once your customer has approved consent request. The flow mainly involves data fetching against a valid data session with below APIs.
 
