--- a/content/data/account-aggregator/v1/fi-data-types.mdx
+++ b/content/data/account-aggregator/v1/fi-data-types.mdx
@@ -5,7 +5,7 @@ order: 5
 visible_in_sidebar: true
 ---
 
-## FI data types-v1
+## FI data types
 
 The Account Aggregator(AA) ecosystem supports 23 FI types spread across bank, insurance, pension and investments FI types as discussed below. <br/>
 The schema across all FI types adheres to a set of defined components:
