--- a/content/data/account-aggregator/v1/get-started.mdx
+++ b/content/data/account-aggregator/v1/get-started.mdx
@@ -5,7 +5,7 @@ order: 0
 visible_in_sidebar: false
 ---
 
-## Quickstart-v1
+## Quickstart
 
 Here is a quick summary of steps to help you integrate with Setu’s AA sandbox. Before you start, there are some key terms that will be referred to periodically in the documentation—
 
